# gasoline-app

./: Cargo.toml  Rocket.toml
src/: error.rs  main.rs
src/api/: collection.rs  mod.rs  page.rs
src/auth/: claims.rs  error.rs  mod.rs  user.rs
src/handler/: fillup.rs  mod.rs  vehicle.rs
src/model/: auth_request.rs  context.rs  fillup.rs  mod.rs  token_response.rs  vehicle.rs
src/request/: error.rs  mod.rs
test/: add_vehicle  auth-test  authrequest.json  authtest  get-token  list-vehicles  new_vehicle.json
