[package]
name = "core"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
chrono = "*"
clap = {version = "*", features = ["unstable", "suggestions", "color"]}
clippy = {version = "*", optional = true}
gasoline-data = {git = "https://github.com/archer884/gasoline-data.git"}
harsh = "*"
lazy_static = "*"
rwt = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
stopwatch = "*"

[features]
default = []
