[package]
name = "core"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"
chrono = "*"
clap = { version = "*", features = ["unstable", "suggestions", "color"] }
gasoline-data = { path = "../gasoline-data" }
harsh = { path = "../../harsh" }
lazy_static = "*"
rwt = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
stopwatch = "*"

[features]
default = []
